# xwelltris

./: .gitignore  AUTHORS  Changelog  INSTALL  Makefile.in  README  README.keys  config.status  configure  configure.in  makedist
data/: welltris.scores
docs/srcdoc/: sources
src/: Make.common.in  commonfuncs.cxx  geometry.cxx  main.cxx  makefile.in  mydebug.c  rndgen.cxx  wellclass.cxx  welldrawing.cxx  wellengine.cxx  wellimagefont.cxx  wellinput.cxx  wellintro.cxx  wellkey.cxx  wellsimpledraw.cxx  wellswitch.cxx  welltopnine.cxx
src/image/: Makefile.in  accel.c  accel.h  convert.cxx  image.cxx  image.h  jpeg.c  picinfo.h
src/image/sublib/: IMG_gif.c  SDL.h  SDL_error.c  SDL_error.h  SDL_image.h  SDL_mutex.h  SDL_rwops.c  SDL_rwops.h  SDL_surface.c  SDL_to_picinfo.c  SDL_types.h  SDL_video.h  im_exp.h  makefile.in
src/include/: bilist.h  commonfuncs.h  config.h  config.h.in  geometry.h  globals.h  globals.h.in  globdef.h  mydebug.h  sysheaders.h  types.h  version.h  wellclass.h  welldrawing.h  wellengine.h  wellimagefont.h  wellinput.h  wellintro.h  wellkey.h  wellobject.h  wellsimpledraw.h  wellswitch.h  welltopnine.h  welltris.h  xheaders.h
src/sdl/: sdl_gfxprimitives.c  sdl_gfxprimitives.h  sdlwelldrawing.cxx  sdlwelldrawing.h  sdlwellengine.cxx  sdlwellengine.h  sdlwellimagefont.cxx  sdlwellimagefont.h  sdlwellinput.cxx  sdlwellinput.h
src/x11/: xwelldrawing.cxx  xwelldrawing.h  xwellengine.cxx  xwellengine.h  xwellimagefont.cxx  xwellimagefont.h  xwellinput.cxx  xwellinput.h
